@startuml
'https://plantuml.com/sequence-diagram
abstract class ATM_TheoMenhGia
class MenhGiaThapNhat
class MenhGia
abstract class ChuoiMenhGiaFactory
class ChuoiMenhGiaVND

abstract class ATM_TheoMenhGia {
    int menhGia
    +{abstract} ATM_TheoMenhGia menhGiaKeTiep(ATM_TheoMenhGia m)
    +{abstract} void rutTien(int soTien)
}
abstract class ChuoiMenhGiaFactory {
    #{abstract} ATM_TheoMenhGia getChuoiMenhGia(int menhGia)
    void rutTien(int soTien, int menhGiaCaoNhat)
}
ATM_TheoMenhGia <|-- MenhGia
ATM_TheoMenhGia <|-- MenhGiaThapNhat
MenhGia --> ATM_TheoMenhGia:ketiep
ChuoiMenhGiaVND *--> ATM_TheoMenhGia
ChuoiMenhGiaVND --|> ChuoiMenhGiaFactory
ChuoiMenhGiaFactory ..> ATM_TheoMenhGia

note bottom of MenhGiaThapNhat
    Phương thức rút tiền:
    số tờ = soTien/menhGia
    in số tờ: menhGia
end note

note bottom of MenhGia
    Phương thức rút tiền:
    số dư = soTien%menhGia
    nếu số tờ >0 --> in số tờ: menhGia
    Nếu số dư >0:
        Chuyển số dư cho thành phần kế tiếp
end note

note top of ChuoiMenhGiaVND
    Tạo các đối tượng ATM_TheoMenhGia theo mệnh giá tiền Việt Nam
    Kết nối các đối tượng này thành chuỗi trong phương thức khởi tạo
    Phương thưc getChuoiMenhGia trả về đối tượng kiểu ATM_TheoMenhGia trong chuỗi ứng giá trị đầu vào
end note

note bottom of ChuoiMenhGiaFactory
    Phương thức rutTien
    Gọi phương thức getChuoiMenhGia --> chuoiMenhGia
    Gọi phương thức rutTien trên đối tượng chuoiMenhGia
end note
@enduml